# 3D-Model-Viewer

./: .gitmodules  CMakeLists.txt  README.md
Assignments/: Assignment_3.md
Pictures/: Assignment_1.md  Assignment_3.md  Assugnment_2.md
Viewer/include/: AmbientLight.h  Camera.h  Face.h  InitShader.h  Light.h  MeshModel.h  PointLight.h  Renderer.h  Scene.h  ShaderProgram.h  Texture2D.h  Utils.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  stb_image.h
Viewer/shaders/: fshader.glsl  fshader_color.glsl  fshader_reflection.glsl  vshader.glsl  vshader_color.glsl  vshader_light.glsl  vshader_reflection.glsl
Viewer/src/: AmbientLight.cpp  Camera.cpp  Face.cpp  InitShader.cpp  Light.cpp  MeshModel.cpp  PointLight.cpp  Renderer.cpp  Scene.cpp  ShaderProgram.cpp  Texture2D.cpp  Utils.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main.cpp
